@@ -1,55 +1,0 @@
-<html>
-<style>
-    a { color: inherit; }
-</style>
-<body>
-    <p>
-        <p>
-            <b>BirthdayDroid</b><br />
-            <br />
-            BirthDayDroid is an open-source project created to help you to remember your friends birthday.
-        </p>
-    <hr>
-    <br />
-        <b>You can help us :D</b>
-        <p>
-            <a href="https://gitlab.com/tmendes/BirthDayDroid/">Developer/Designer?</a>
-        </p>
-        <p>
-            <a href="https://gitlab.com/tmendes/BirthDayDroid/issues">Feature Requests and/or Bug Resports?</a>
-        </p>
-        <p>
-            <a href="https://transifex.com/wlnomads/birthdaydroid">Support a new language?</a>
-        </p>
-        <p>
-            <a href="https://tmendes.gitlab.io/BirthDayDroid/#donate">Buy us a coffee :)</a>
-        </p>
-    <hr>
-    <br />
-    <p>
-        <b>Code Developers:</b><br />
-        &nbsp;- Thiago Ribeiro Mendes<br />
-        <b>Code Patches:</b><br />
-        &nbsp;- Moritz Bandemer (Testing, new ideas and patches)<br />
-        <br />
-        <b>Contributors:</b><br />
-        &nbsp;- Shane Synan (Testing)<br />
-        &nbsp;- Evan Goode  (Grammar & spelling fixes)<br />
-        &nbsp;- Florian Angermeier (Grammar & spelling fixes)<br />
-        &nbsp;- Moritz Bandemer (Testing, new ideas)<br />
-        &nbsp;- Sopor (Testing, Grammar & spelling fixes, new ideas)<br />
-        <br />
-        <b>Translation</b><br />
-        &nbsp; - A bunch of nice people on Transifex<br />
-        <br />
-        <b>Libs (Thank you so much)</b>
-         - Charts: <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a><br />
-        <br />
-        <b>3th party icons (our special thanks)</b><br />
-        &nbsp;- App Icon: <a href="https://mozilla.github.io/fxemoji/">Firefox OS Emojis</a><br />
-        &nbsp;- Navigation bar icons: <a href="https://material.io/tools/icons/">Google Team</a><br />
-        &nbsp;- Emojis: <a href="https://www.emojione.com/">Free emojis provided by Emoji One</a><br />
-        <br />
-    </p>
-</body>
-</html>
